# enterprise-product-design

./: .gitignore  AGENT_CAPABILITY_UPGRADE_PLAN.md  README.md
.claude/skills/deploy/: SKILL.md
.claude/skills/deploy/references/: current-runtime.md
apps/agent/: .env.example  main.py  pyproject.toml
apps/agent/app/api/: auth.py  design.py
apps/agent/app/db/: database.py  models.py  repository.py
apps/agent/app/design/: generator.py  validator.py
apps/agent/app/infrastructure/: config.py
apps/web/: .env.local.example  .eslintrc.json  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/: layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: login-page.test.tsx  page.tsx
apps/web/src/app/api/agent/[...path]/: route.ts
apps/web/src/app/api/auth/login/: route.ts
apps/web/src/app/api/auth/logout/: route.ts
apps/web/src/app/api/auth/me/: route.ts
apps/web/src/app/api/health/: route.ts
apps/web/src/components/: NavBar.tsx
apps/web/src/lib/: auth.ts  db.ts
infra/nginx/: product-design-luyaxiang.nginx.conf
scripts/dev/: start-agent.sh  start-web.sh
